fix: make allowed content types immutable